--- a/StylistEye/Resources/Property lists/Info.plist
+++ b/StylistEye/Resources/Property lists/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SanFranciscoText-Bold.otf</string>
+		<string>SanFranciscoText-BoldItalic.otf</string>
+		<string>SanFranciscoText-Heavy.otf</string>
+		<string>SanFranciscoText-HeavyItalic.otf</string>
+		<string>SanFranciscoText-Light.otf</string>
+		<string>SanFranciscoText-LightItalic.otf</string>
+		<string>SanFranciscoText-Medium.otf</string>
+		<string>SanFranciscoText-MediumItalic.otf</string>
+		<string>Avenir.ttc</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
